2007-12-06  Andy Wingo  <wingo@pobox.com>

	* test-suite/wrapset.api: 
	* test-suite/gobject.api: Regenerate.

	* gnome/gw/support/gtk-doc.scm (generate-undocumented-texi): New
	exported function, generates undocumented.texi.

	* doc/glib/undocumented.texi: 
	* doc/glib/guile-gnome-glib.texi (Top): Add undocumented
	functions.

	* doc/glib/defuns-unicode.xml.texi: Regenerated docs removed some
	functions.

2007-11-30  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/defs.scm (type-lookup): Ignore functions that
	would force opaque types to be wrapped.

2007-11-25  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/defs.scm (type-lookup)
	(construct-argument-list): Add another arg, #:for-proc, that will
	be used when we warn about making opaque types.
	(load-defs): Set #:for-proc on lookup-type.

	* doc/glib/defuns-main.xml.texi: 
	* doc/glib/defuns-iochannels.xml.texi: 
	* doc/glib/defuns-bookmarkfile.xml.texi: Regenerated, adds entries
	for the opaque types.

	* gnome/gw/support/gtk-doc.scm (superclasses)
	(gobject-class-stexi-docs): Document superclasses.
	(check-documentation-coverage): Print out "spurious" symbols,
	those that we think are documented but are not in the wrapper.

	* gnome/gw/support/gobject.scm (initializations-cg)
	(wrap-opaque-pointer!): Do define and export the wct variable, as
	other wrapsets that use this type need to get at the wct. Doh.

	* doc/gobject/guile-gnome-gobject.texi (Top): 
	* doc/glib/guile-gnome-glib.texi (Top): Remove the concept index,
	and add a type index.

	* gnome/gw/support/gtk-doc.scm (gobject-class-stexi-docs): Don't
	error if the class is not defined in the module.

	* gnome/gw/support/gobject.scm (wrap-freeable-pointer!)
	(wrap-refcounted-pointer!): Accept the ctype as the name of the
	type without a star, so that the type name becomes e.g.
	<g-main-loop> instead of <g-main-loop*>. This means that only
	truly opaque pointers will have a * in their names.

	* gnome/gw/gobject-spec.scm (initialize): Specialize on